--- a/style.css
+++ b/style.css
@@ -2,9 +2,72 @@
   font-family: "Norse-Bold";
   src: url("/Assets/fonts/Norse-Bold.woff2") format('woff2'),
   url("Assets/fonts/Norse-Bold.woff") format('woff'),
-  url("Assets/fonts/Norse-Bold.otf") format('opentype'),
+  url("Assets/fonts/Norse-Bold.otf") format('opentype');
+  font-display: swap;
 }
 
 * {
-  font-family: "Norse-Bold";
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+}
+
+a {
+  color: inherit;
+}
+
+.wrapper {
+  display: flex;
+  height: 100vh;
+}
+
+.logo-section {
+  font-family: "Roboto", sans-serif;
+  background-image: url(Assets/photo-1585202900225-6d3ac20a6962.avif);
+  background-size: cover;
+  background-position: center;
+  width: calc(100vw / 2.5);
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.logo-section .logo-banner {
+  font-family: "Norse-Bold", "Roboto", sans-serif;
+  --dark-overlay: hsla(0, 0%, 0%, 0.453);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--dark-overlay);
+  height: 120px;
+  padding: 11px 0;
+  margin-top: calc(100vh / 4)
+}
+
+h1 {
+  font-size: 80px;
+  font-weight: 50;
+  padding-top: 1rem;
+}
+
+.logo-banner img {
+  height: 100%;
+}
+
+.logo-section p {
+  align-self: center;
+  font-size: 0.8rem;
+  margin-bottom: 5px;
+  opacity: 0.85;
+  word-spacing: 1px;
+}
+
+.logo-section p a {
+  text-decoration: underline;
+}
+
+form {
+  font-family: "Roboto", sans-serif;
 }
