--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ a {
   background-image: url(Assets/photo-1585202900225-6d3ac20a6962.avif);
   background-size: cover;
   background-position: center;
-  width: calc(100vw / 2.5);
+  width: calc(100vw / 2);
   color: #fff;
   display: flex;
   flex-direction: column;
@@ -97,6 +97,11 @@ section {
   justify-content: space-around;
 }
 
+input:focus{
+  border: 1px solid rgb(132, 132, 220);
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+}
+
 .input-field {
   display: flex;
   flex-direction: column;
@@ -112,4 +117,35 @@ section {
   border: 1px solid;
   border-color:#c0c0c0;
   border-radius: 3px;
+}
+
+.motivational-quote {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  margin: 0 0 30px 30px;
+  font-size: 24px;
+  font-weight: bold;
+  color: #4a4a4a;
+}
+
+.motivational-quote p,
+.motivational-quote span {
+  padding: 0 20px;
+}
+
+.submit-section {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin: 20px 0 0 50px;
+}
+
+.submit-section button {
+  width: 180px;
+  height: 40px;
+  border: 0;
+  border-radius: 7px;
+  background-color: rgb(94, 131, 94);
+  color: #fff;
 }
